force-app/main/default/objects/Subscription_Instance__c/Subscription_Instance__c.object-meta.xml
<CustomObject>
    <label>Subscription Instance</label>
    <nameField>
        <displayFormat>SCLM-{0000000}</displayFormat>
        <label>Subscription Instance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscription Instances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>