force-app/main/default/objects/Subscription_Instance__c/fields/Job_Card__c.field-meta.xml
<CustomField>
    <fullName>Job_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Card</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Subscription Instances</relationshipLabel>
    <relationshipName>Subscription_Instances</relationshipName>
    <type>Lookup</type>
</CustomField>