force-app/main/default/objects/Subscription_Instance__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription</label>
    <referenceTo>Subscription__c</referenceTo>
    <relationshipLabel>Subscription Instances</relationshipLabel>
    <relationshipName>Subscription_Instances</relationshipName>
    <type>Lookup</type>
</CustomField>